services/cronchecker-deployment/cronchecker-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cronchecker-network-policy
spec:
  podSelector:
    matchLabels:
      app: cronchecker
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
        - ipBlock:
            # Allows all IPs
            cidr: 0.0.0.0/0
            except:
              # make sure to block link-local addresses,
              # since there's sensitive data in http://metadata
              - 169.254.0.0/16
  ingress:
